@@ -3,6 +3,8 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-10621] fixed hanging of dragged widget while updating content (Alexei)
+..F....... [ZBX-10621] removed excessive white space in dashboard (Pavel, Alexei)
 .......PS. [ZBX-6370] added ability to monitor SNMP devices returning OIDs in decreasing or mixed order (Andris)
 ..F....... [ZBX-10918] fixed severity filter in map.view action (Cemeris, Gunars)
 ..F....... [ZBX-10840] fixed selecting of group in popup page filter (Gunars)
